# I007Service

./: AndroidManifest.xml  README.md  build.gradle  build.sh  config.gradle  gradle.properties  module.gradle  proguard-rules.pro  settings.gradle
MachineLearning/core/: build.gradle
MachineLearning/core/src/com/journeyOS/machinelearning/: Classifier.java  MachineLearningManager.java  Worker.java  WorkerManager.java
MachineLearning/pytorch/assets/: mobilenet_v3_small.json
MachineLearning/pytorch/src/com/journeyOS/pytorch/: BaseClassifier.java  ImageClassifier.java  TextDetector.java
MachineLearning/tflite/: AndroidManifest.xml  build.gradle
MachineLearning/tflite/src/com/journeyOS/tflite/: BaseClassifier.java  ImageClassifier.java  (+1 more)
aidl/com/journeyOS/i007Service/interfaces/: II007Listener.aidl  II007Service.aidl  IServiceFetcher.aidl
app/: AndroidManifest.xml  build.gradle
app/res/layout/: monitor_activity.xml
app/res/values/: colors.xml  string.xml  styles.xml
app/src/com/journeyOS/monitor/: MonitorActivity.java  MonitorApplication.java
base/: AndroidManifest.xml  build.gradle
base/src/com/journeyOS/common/: FileConfigConstant.kt  SmartLog.java  VersionConstant.java
database/: AndroidManifest.xml  build.gradle
database/src/com/journeyOS/database/: DataRepository.java
framework/: AndroidManifest.xml  build.gradle
gradle/wrapper/: gradle-wrapper.properties
i007Service/: AndroidManifest.xml  build.gradle  gradle.properties
i007Service/assets/: bl.json
i007Service/res/xml/: accessibility.xml
i007Service/src/com/journeyOS/i007/: DataResource.java  I007Manager.java
i007Service/src/com/journeyOS/i007Service/: I007Manager.java
machinelearning/: AndroidManifest.xml  build.gradle
machinelearning/core/: build.gradle
machinelearning/mace/: AndroidManifest.xml  build.gradle
machinelearning/mace/assets/: mobilenet_v1.pb
machinelearning/mace/script/: build.sh  convert-model-code.sh  convert-model-file.sh  mobilenet-file.yml  mobilenet.yml  mobilenet_v1-code.yml  mobilenet_v1_quant-code.yml  mobilenet_v1_quantized-code.yml  mobilenet_v2-code.yml  mobilenet_v2_quant-code.yml  mobilenet_v2_quantized-code.yml  push.sh  spilt-model-code.sh
machinelearning/mace/script/mobilenet_v1/: mobilenet_v1.pb
machinelearning/mace/src/cpp/: CMakeLists.txt  JniHelper.cpp  JniHelper.h  JniLog.h  Mace.cpp  Mace.h  MaceCodeNetwork.cpp  MaceCodeNetwork.h  MaceCommon.cpp  MaceCommon.h  MaceFileNetwork.cpp  MaceFileNetwork.h
machinelearning/mace/src/cpp/include/mace/port/: env.h  file_system.h  logger.h
machinelearning/mace/src/cpp/include/mace/public/: mace.h  mace_engine_factory.h  mobilenet_v1.h  mobilenet_v1_quant.h  mobilenet_v1_quantized.h  mobilenet_v2.h  mobilenet_v2_quant.h  mobilenet_v2_quantized.h
machinelearning/mace/src/cpp/include/mace/utils/: logging.h  mace_engine_config.h  memory.h  string_util.h
machinelearning/pytorch/: AndroidManifest.xml  build.gradle
machinelearning/snpe/: AndroidManifest.xml  build.gradle
machinelearning/snpe/assets/: inception_v3_quantized.json
machinelearning/src/com/journeyOS/machinelearning/: AbstractClassifier.java  MachineLearningManager.java  Worker.java  WorkerFactory.java  WorkerManager.java
machinelearning/tflite/: build.gradle
machinelearning/tflite/assets/: mobilenet_labels.json
monitor/: AndroidManifest.xml  build.gradle
monitor/res/xml/: accessibility.xml
monitor/src/com/journeyOS/monitor/: AbstractMonitor.java  BaseMonitor.java  Monitor.java  MonitorManager.java
platform/: AndroidManifest.xml  build.gradle
platform/src/com/journeyOS/platform/: BasePlatformApi.java  PlatformManager.java
res/values/: styles.xml
res/xml/: accessibility.xml
resource/: app-architecture.drawio
scripts/: android-build.gradle  build.sh  config.gradle
sdk/: AndroidManifest.xml  build.gradle
sdk/aidl/com/journeyOS/i007manager/: AiData.aidl  AiImage.aidl  AiModel.aidl  AiResult.aidl  Battery.aidl  I007App.aidl  I007Battery.aidl  I007HeadSet.aidl  I007Net.aidl  I007Result.aidl  I007Screen.aidl  IAiManager.aidl  IAiObserver.aidl  II007Listener.aidl  II007Manager.aidl  II007Observer.aidl
sdk/src/com/journeyOS/i007manager/: AiData.java  AiImage.java  AiManager.java  AiModel.java  AiModelBuilder.java  AiModelMaker.java  AiObserver.java  AiResult.java  Battery.java  I007App.java  I007Battery.java  I007Core.java  I007HeadSet.java  I007Manager.java  I007Net.java  I007Observer.java  I007Result.java  I007Screen.java  ServerLifecycle.java  SmartLog.java
service/: AndroidManifest.xml  build.gradle
service/res/drawable/: svg_service.xml
service/res/layout/: ai_image_activity.xml  ai_text_activity.xml
service/res/values/: strings.xml  styles.xml
service/src/com/journeyOS/i007Service/: AppConfig.java  I007Application.java
src/com/journeyOS/i007Service/: ClientSession.kt  DataResource.java  I007Manager.java  I007Manager.kt  II007Engine.aidl  II007Listener.aidl  II007Register.aidl  II007Service.aidl  IServiceFetcher.aidl
src/com/journeyOS/i007Service/base/: Constant.kt
src/com/journeyOS/i007Service/config/: AppConfig.java
src/com/journeyOS/i007Service/core/: Engine.kt  EngineManager.kt  I007Core.java  I007Observer.kt  NotifyManager.java  ProduceableSubject.kt  Producer.kt  SceneUtils.java  SubjectSupport.kt
src/com/journeyOS/i007Service/database/: App.java  App.kt  AppDao.kt  DBConfig.java  DBConfigs.kt  DBHelper.kt  DBOperate.java  DatabaseManager.java  DatabaseManager.kt  I007Database.kt  I007Provider.java
src/com/journeyOS/i007Service/hook/: ActivityManagerHook.java  Hook.java  HookManager.java  InputMethodManagerHook.java  NotificationManagerHook.java
src/com/journeyOS/i007Service/service/: I007Engine.kt  I007Register.java  I007Register.kt  I007Service.java  I007Service.kt
src/com/journeyOS/i007Service/task/: CoreExecutors.kt  TaskManager.java  TaskManager.kt
test/: AndroidManifest.xml  build.gradle
test/libs/: i19tsdk-release.aar
test/res/layout/: activity_test.xml
test/res/values/: strings.xml
test/src/com/journeyOS/i007test/: I007TestApplication.java  TestActivity.java
(+249 files in other folders)
